# crewai-poetry-crew

./: .gitignore  Ideas.txt  Makefile  Psychologist.md  README.md  ToDo.txt  dictionaries.py  metrics.md  output.json  pyproject.toml  test_hook.md  xxxxx
descriptions/: Architect.txt  Editor.txt  Evaluator.txt  Gardener.txt  Muse.txt  Poet.txt  Psychologist.txt  Sentinel.txt  architect-poem-one.txt  create-concepts.txt  edit-poem-one.txt  evaluate-poem-two.txt  finalise-poem.txt  psychoanalyse-poem-three.txt  revise-poem-one.txt  screen-poem-two.txt  sow-seeds.txt  write-poem.txt
evaluation/: LeakageResult.py  VersionMetrics.py  evaluate.py  metrics.py  snapshots.py
logs/: crewai-2025-11-24-15-19-57.out  crewai-2025-12-10-20-11-41.out  crewai-2025-12-10-20-11-42.json  crewai-2025-12-10-20-11-42.md  crewai-2025-12-10-21-18-14.json  crewai-2025-12-10-21-18-14.md  crewai-2025-12-10-21-18-14.out  crewai-2025-12-10-21-18-14.txt  crewai-2025-12-10-22-19-42.json  crewai-2025-12-10-22-19-42.out  crewai-2025-12-10-22-56-04.json  crewai-2025-12-10-22-56-04.md  crewai-2025-12-10-22-56-04.out  crewai-2025-12-10-22-56-04.txt  crewai-2025-12-13-14-56-21.json  crewai-2025-12-13-14-56-21.out
publications/: Anchors-in-the-Fog-Light-as-Reckoning-2025-11-30-21-35-48.md  Boundary-Gravity-and-the-Wreckage-of-Consent-Again-2025-12-02-06-13-53.md  Breath-Becomes-Steel-Heart-Breaks-2025-12-01-05-56-11.md  Breath-Through-Glass-The-Bridge-That-Becomes-A-Weapon-2025-12-02-06-43-51.md  Confession_on_the_High_Road-2025-11-24-08-24-13.md  Doorway-Between-Mercy-And-Breaking-2025-12-01-01-27-59.md  (+12 more)
(+80 files in other folders)
